# Logging_system

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: console_app.h  thread_queue.h
app/src/: console_app.cpp  main.cpp
app/tests/: CMakeLists.txt  app_tests.cpp
